--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   # sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt59base libgl1-mesa-dev cmake doxygen libcups2-dev libgdal-dev libpolyclipping-dev libproj-dev qt5-default qtbase5-dev qtbase5-private-dev qtbase5-dev-tools qttools5-dev qttools5-dev-tools libqt5sql5-sqlite zlib1g-dev
+  - sudo apt-get -y install libgl1-mesa-dev cmake doxygen libcups2-dev libgdal-dev libpolyclipping-dev libproj-dev qt5-default qtbase5-dev qtbase5-private-dev qtbase5-dev-tools qttools5-dev qttools5-dev-tools libqt5sql5-sqlite zlib1g-dev
   # source /opt/qt*/bin/qt*-env.sh
 
 script:
